--- a/css/general.css
+++ b/css/general.css
@@ -1948,7 +1948,8 @@ img.mfp-img {
           padding-left: 100px; } }
       @media (max-width: 750px) {
         .room__info__details {
-          padding-left: 0px; } }
+          padding-left: 0px;
+          padding-top: 80px; } }
       .room__info__details h2 {
         font-size: 30px;
         margin-top: 80px;
@@ -2008,7 +2009,9 @@ a.button {
 
 .slick-slider .slick-track,
 .slick-slider .slick-list {
-  height: 100%; }
+  height: 100%;
+  position: relative;
+  z-index: 10; }
 
 .slider, .room__info__details .roomslider {
   height: 100%;
@@ -2029,12 +2032,15 @@ a.button {
     bottom: 40px;
     top: auto;
     margin-top: 0;
-    z-index: 10;
+    z-index: 20;
     width: 60px;
     height: 60px;
     background-color: #fff;
     border-radius: 50%;
-    overflow: hidden; }
+    overflow: hidden;
+    display: block;
+    opacity: 1;
+    visibility: visible; }
     @media (max-width: 767px) {
       .slider .slick-arrow, .room__info__details .roomslider .slick-arrow {
         bottom: 20px; } }
@@ -2059,7 +2065,8 @@ a.button {
     left: 80px;
     color: #fff;
     font-size: 35px;
-    font-family: "Playfair Display Regular"; }
+    font-family: "Playfair Display Regular";
+    z-index: 20; }
     .slider .counter span, .room__info__details .roomslider .counter span {
       color: #fff; }
     @media (max-width: 767px) {
