--- a/css/scss/parts/_rooms.scss
+++ b/css/scss/parts/_rooms.scss
@@ -163,6 +163,7 @@
             }
             @media (max-width: 750px) {
                 padding-left: 0px;
+                padding-top: 80px;
             }
             h2 {
                 font-size: 30px;
