--- a/css/scss/parts/_slider.scss
+++ b/css/scss/parts/_slider.scss
@@ -1,6 +1,8 @@
 .slick-slider .slick-track,
 .slick-slider .slick-list {
 	height: 100%;
+	position: relative;
+	z-index: 10;
 }
 .slider {
 	height: 100%;
@@ -25,12 +27,15 @@
 		bottom: 40px;
 		top: auto;
 		margin-top: 0;
-		z-index: 10;
+		z-index: 20;
 		width: 60px;
 		height: 60px;
 		background-color: #fff;
 		border-radius: 50%;
 		overflow: hidden;
+		display: block;
+		opacity: 1;
+		visibility: visible;
 
 		@media ($phones) {
 			bottom: 20px;
@@ -66,6 +71,7 @@
 		color: #fff;
 		font-size: 35px;
 		font-family: $pdr;
+		z-index: 20;
 
 		span {
 			color: #fff;
