--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -1,22 +1,45 @@
 
 .sideMenu {
     @include position(fixed, 0, auto, 0, 0);
-    width: 960px;
+    width: 100%;
     z-index: 1000;
     margin: 0;
     left: -200%;
-    padding: 0px 0 30px 80px;
+    padding: 0px;
     overflow: hidden;
-    @media (max-width: 1100px) {
-        padding: 0px 0 30px 40px;
-        width: 500px;
+    &:after {
+        display: block;
+        position: absolute;
+        content: "";
+        width: calc(100% - 960px);
+        right: -100%;
+        top: 0;
+        height: 100%;
+        -webkit-transition: all .2s;
+           -moz-transition: all .2s;
+            -ms-transition: all .2s;
+             -o-transition: all .2s;
+                transition: all .2s;
+        background: url('../images/menu_bg.jpg');
+        background-position: 50% 50%;
+        -webkit-background-size: cover;
+             -o-background-size: cover;
+                background-size: cover;
+        @media (max-width: 1100px) {
+            width: calc(100% - 500px);
+        }
+        @media (max-width: 650px) {
+            width: calc(100% - 300px);
+        }
+        @media (max-width: 750px) {
+            width: 100%;
+        }
     }
-    @media (max-width: 650px) {
-        width: 300px;
-    }
-    @media (max-width: 750px) {
-        width: 100%;
-        padding: 0px 0 30px 20px;
+    &.active {
+        &:after {
+            -webkit-animation: moveLeft 1s forwards; /* Chrome, Safari, Opera */
+            animation: moveLeft 1s forwards;
+        }
     }
     @include mh700 {
         
@@ -24,27 +47,36 @@
     .wrapper {
         position: relative;
         z-index: 10;
-        width: 100%;
+        width: 960px;
         height: 100%;
-        opacity: 0;
-    -webkit-transition: opacity .2s .4s;
+        padding-bottom: 30px;
+        padding-left: 80px;
+        margin-left: 0;
+        overflow: hidden;
+        .wrapHeadInfo {
+            height: 100%;
+            position: relative;
+            z-index: 1000;
+            opacity: 0;
+        -webkit-transition: opacity .2s .4s;
        -moz-transition: opacity .2s .4s;
         -ms-transition: opacity .2s .4s;
          -o-transition: opacity .2s .4s;
-            transition: opacity .2s .4s;
-        &:after {
-            display: block;
-            content: '';
-            width: 15px;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            right: 0;
-            z-index: 21;
-            background: #FFF;
-            -webkit-box-shadow:  0 0 120px 100px rgba(255,255,255,1);
-            -moz-box-shadow: 0 0 120px 100px rgba(255,255,255,1);
-            box-shadow:  0 0 120px 100px rgba(255,255,255,1);
+            transition: opacity .2s .4s;  
+            &:after {
+                display: block;
+                content: '';
+                width: 15px;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                right: 0;
+                z-index: 21;
+                background: #FFF;
+                -webkit-box-shadow:  0 0 120px 100px rgba(255,255,255,1);
+                -moz-box-shadow: 0 0 120px 100px rgba(255,255,255,1);
+                box-shadow:  0 0 120px 100px rgba(255,255,255,1);
+            }
         }
         @media (max-width: 1100px) {
             &:after {
@@ -52,6 +84,17 @@
                 -moz-box-shadow: 0 0 10px 10px rgba(255,255,255,1);
                 box-shadow:  0 0 10px 10px rgba(255,255,255,1);
             }
+        }
+        @media (max-width: 1100px) {
+            padding: 0px 0 30px 40px;
+            width: 500px;
+        }
+        @media (max-width: 650px) {
+            width: 300px;
+        }
+        @media (max-width: 750px) {
+            width: 100%;
+            padding: 0px 0 30px 20px;
         }
     }
     
@@ -284,6 +327,20 @@
             display: none;
         }
     }
+}
+
+/* Chrome, Safari, Opera */ 
+@-webkit-keyframes moveLeft {
+    0% {right: -100%;}
+    30% {right: 0;}
+    100% {right: 0;}
+} 
+
+/* Standard syntax */ 
+@keyframes moveLeft {
+    0% {right: -100%;}
+    30% {right: 0;}
+    100% {right: 0;}
 }
 
 /* Chrome, Safari, Opera */ 
