--- a/css/general.css
+++ b/css/general.css
@@ -1527,9 +1527,9 @@ img.mfp-img {
   }
 }
 .sideMenu.active:after {
-  -webkit-animation: moveLeft 1s forwards;
+  -webkit-animation: 1.4s moveLeft .1s forwards;
   /* Chrome, Safari, Opera */
-  animation: moveLeft 1s forwards;
+  animation: 1.4s moveLeft .1s forwards;
 }
 .sideMenu .wrapper {
   position: relative;
