--- a/css/scss/parts/_page-about.scss
+++ b/css/scss/parts/_page-about.scss
@@ -1,8 +1,9 @@
 .services-link {
 	position: absolute;
-	bottom: 20px;
+	bottom: 40px;
 	color: $blue;
 	font-size: 16px;
+	text-decoration: underline;
 
 	@media ($tablets) {
 		position: static;
@@ -23,4 +24,8 @@
 		margin-top: -4px;
 		margin-right: 5px;
 	}
+}
+
+.viewport .column--content {
+	padding-bottom: 80px;
 }
