--- a/css/scss/parts/_rooms.scss
+++ b/css/scss/parts/_rooms.scss
@@ -5,11 +5,15 @@
     border-top: 1px solid #d7dbd9;
 }
 .room {
-    margin: 0 10px 90px 10px;
+    margin: 0 10px 0px 10px;
     background-color: #FFF;
     cursor: pointer;
-    margin-bottom: 90px;
     position: relative;
+    + hr {
+        display: block;
+        width: 100%;
+        margin: 45px 0;
+    }
     &:hover {
         -webkit-box-shadow: 0 0 20px rgba(0,0,0, .1);
         box-shadow: 0 0 20px rgba(0,0,0, .1); 
