--- a/css/general.css
+++ b/css/general.css
@@ -1658,21 +1658,45 @@ img.mfp-img {
   height: 16px;
   background-repeat: no-repeat;
 }
-.social__item--fb {
-  background-position: 0 0;
-}
-.social__item--tw {
-  background-position: -59px 0;
+.social__item.tw:hover {
+  background-position: -5px -0px;
   width: 22px;
+  height: 15px;
 }
-.social__item--vm {
-  background-position: -27px 0px;
-  width: 19px;
-}
-.social__item--inst {
-  background-position: -96px 0;
+.social__item.tw {
+  background-position: -5px -20px;
   width: 22px;
-  margin-right: 0;
+  height: 15px;
+}
+.social__item.vm:hover {
+  background-position: -5px -40px;
+  width: 17px;
+  height: 15px;
+}
+.social__item.vm {
+  background-position: -5px -60px;
+  width: 17px;
+  height: 15px;
+}
+.social__item.lnk:hover {
+  background-position: -5px -80px;
+  width: 16px;
+  height: 16px;
+}
+.social__item.lnk {
+  background-position: -5px -101px;
+  width: 16px;
+  height: 16px;
+}
+.social__item.fb:hover {
+  background-position: -5px -122px;
+  width: 9px;
+  height: 16px;
+}
+.social__item.fb {
+  background-position: -5px -143px;
+  width: 9px;
+  height: 16px;
 }
 
 .circle {
@@ -2380,11 +2404,6 @@ img.mfp-img {
     width: 300px;
   }
 }
-@media (max-width: 750px) {
-  .room {
-    margin-bottom: 60px;
-  }
-}
 .room__img {
   height: 270px;
   position: relative;
@@ -2646,12 +2665,19 @@ a.button {
   z-index: 20;
   width: 60px;
   height: 60px;
-  background-color: #fff;
+  /*background-color: #fff;*/
   border-radius: 50%;
   overflow: hidden;
   display: block;
   opacity: 1;
   visibility: visible;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.slider .slick-arrow.slick-disabled, .room__info__details .roomslider .slick-arrow.slick-disabled {
+  -webkit-filter: grayscale(100%) brightness(2);
+  /* Chrome, Safari, Opera */
+  filter: grayscale(100%) brightness(2);
 }
 @media (max-width: 767px) {
   .slider .slick-arrow, .room__info__details .roomslider .slick-arrow {
@@ -2663,9 +2689,11 @@ a.button {
   color: #6A474B;
   font-size: 25px;
   line-height: 15px;
+  display: none;
 }
 .slider .slick-arrow.slick-prev, .room__info__details .roomslider .slick-arrow.slick-prev {
   left: 80px;
+  background-image: url(../images/arrow-prev.png);
 }
 @media (max-width: 767px) {
   .slider .slick-arrow.slick-prev, .room__info__details .roomslider .slick-arrow.slick-prev {
@@ -2674,6 +2702,7 @@ a.button {
 }
 .slider .slick-arrow.slick-next, .room__info__details .roomslider .slick-arrow.slick-next {
   left: 150px;
+  background-image: url(../images/arrow-next.png);
 }
 @media (max-width: 767px) {
   .slider .slick-arrow.slick-next, .room__info__details .roomslider .slick-arrow.slick-next {
