--- a/css/general.css
+++ b/css/general.css
@@ -1516,11 +1516,15 @@ img.mfp-img {
   -ms-transition: all .2s;
   -o-transition: all .2s;
   transition: all .2s;
-  background: url("../images/menu_bg.jpg");
   background-position: 50% 50%;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+@media (min-width: 750px) {
+  .sideMenu:after {
+    background: url("../images/menu_bg.jpg");
+  }
 }
 @media (max-width: 1100px) {
   .sideMenu:after {
@@ -1534,7 +1538,7 @@ img.mfp-img {
 }
 @media (max-width: 750px) {
   .sideMenu:after {
-    width: 100%;
+    display: none;
   }
 }
 .sideMenu.active:after {
@@ -2178,6 +2182,11 @@ img.mfp-img {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+@media (max-width: 991px) and (orientation: landscape) {
+  .mainslider {
+    min-height: 450px;
+  }
 }
 .mainslider .slick-track,
 .mainslider .slick-list {
