--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -20,11 +20,13 @@
             -ms-transition: all .2s;
              -o-transition: all .2s;
                 transition: all .2s;
-        background: url('../images/menu_bg.jpg');
         background-position: 50% 50%;
         -webkit-background-size: cover;
              -o-background-size: cover;
                 background-size: cover;
+        @media (min-width: 750px) {
+            background: url('../images/menu_bg.jpg');
+        }
         @media (max-width: 1100px) {
             width: calc(100% - 500px);
         }
@@ -32,7 +34,7 @@
             width: calc(100% - 300px);
         }
         @media (max-width: 750px) {
-            width: 100%;
+            display: none;
         }
     }
     &.active {
