--- a/css/scss/parts/_mainslider.scss
+++ b/css/scss/parts/_mainslider.scss
@@ -5,6 +5,10 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    @media ($tablets) and (orientation: landscape) {
+        min-height: 450px;
+    }
+
     .slick-track,
     .slick-list {
         height: 100%;
