--- a/css/scss/parts/_slider.scss
+++ b/css/scss/parts/_slider.scss
@@ -39,11 +39,6 @@
 		background-size: 100%;
 		background-repeat: no-repeat;
 
-		&.slick-disabled {
-			-webkit-filter: grayscale(100%) brightness(2); /* Chrome, Safari, Opera */
-    		filter: grayscale(100%) brightness(2);
-		}
-
 		@media ($phones) {
 			bottom: 20px;
 		}
@@ -58,7 +53,11 @@
 
 		&.slick-prev {
 			left: 80px;
-			background-image: url(../images/arrow-prev.png);
+			background-image: url(../images/arrow-prev.svg);
+
+			&.slick-disabled {
+				background-image: url(../images/arrow-prev-disabled.svg);
+			}
 
 			@media ($phones) {
 				left: 20px;
@@ -66,7 +65,11 @@
 		}
 		&.slick-next {
 			left: 150px;
-			background-image: url(../images/arrow-next.png);
+			background-image: url(../images/arrow-next.svg);
+
+			&.slick-disabled {
+				background-image: url(../images/arrow-next-disabled.svg);
+			}
 
 			@media ($phones) {
 				left: 90px;
