--- a/css/scss/parts/_buttons.scss
+++ b/css/scss/parts/_buttons.scss
@@ -33,6 +33,12 @@
     &--send:before {
         background-image: url("../images/airplane.png");
     }
+
+    &--book-now:before {
+        background-image: url("../images/book-now.png");
+        width: 19px;
+        height: 20px;
+    }
 }
 a.button {
     line-height: 50px;
