--- a/css/scss/parts/_slider.scss
+++ b/css/scss/parts/_slider.scss
@@ -38,6 +38,9 @@
 		visibility: visible;
 		background-size: 100%;
 		background-repeat: no-repeat;
+		-webkit-box-shadow: inset 0px 0px 1px 0px #fff;
+		-moz-box-shadow: inset 0px 0px 1px 0px #fff;
+		box-shadow: inset 0px 0px 1px 0px #fff;
 
 		@media ($phones) {
 			bottom: 20px;
